<resources>
    <string name="app_name">AppIndexing</string>
    <string name="find">Find</string>
    <string name="id">ID</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
</resources>
